--- a/WebManagerApp/lesson1/package.json
+++ b/WebManagerApp/lesson1/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "firebase": "^7.15.4",
+    "js-cookie": "^2.2.1",
+    "md5": "^2.2.1",
     "node-schedule": "^1.3.2",
     "particles.js": "^2.0.0",
     "react": "^16.13.1",
