--- a/WebManagerApp/lesson1/package.json
+++ b/WebManagerApp/lesson1/package.json
@@ -10,11 +10,13 @@
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "firebase": "^7.15.4",
+    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "md5": "^2.2.1",
     "node-schedule": "^1.3.2",
     "particles.js": "^2.0.0",
     "react": "^16.13.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
     "react-redux": "^7.2.0",
